--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
 .card {
   width: 90%;
   max-width: 470px;
